# polymarket-trading-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ACADEMIC_RESEARCH.md  API_REFERENCE.md  RESEARCH.md  STRATEGIES.md
notebooks/: mm_backtest.ipynb  mm_optimize.ipynb  strategy_analysis.py
src/: __init__.py  cli.py  mm_paper_trading.py  paper_trading.py
src/api/: __init__.py  clob_client.py  gamma_client.py
src/backtesting/: __init__.py  engine.py  mm_engine.py
src/data/: __init__.py  fetcher.py  mm_collector.py
src/strategies/: __init__.py  arbitrage.py  base_strategy.py  longshot_bias.py  market_making.py  mean_reversion.py  momentum.py
