[project]
name = "polymarket-trading-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "typing-extensions>=4.15.0",
]
